[build-system]
requires = ["setuptools>=61.0", "pandas", "clickhouse-driver"]
build-backend = "setuptools.build_meta"


[project]
name = "essentialkit"
version = "0.2"
authors = [
  { name="Patrick Lucescu"},
]
description = "Basic python functions to connect to databases and other essential stuff."
readme = "README.md"
requires-python = ">=3.11"